Fix icon alignment

--- a/components/StoryList/StoryListing/styles.module.scss
+++ b/components/StoryList/StoryListing/styles.module.scss
@@ -2,6 +2,7 @@
 	&-icon {
 		width: 4em !important;
 		height: 4em !important;
+		margin-top: 0.5em;
 	}
 
 	&-content {
