--- a/components/StoryList/styles.module.scss
+++ b/components/StoryList/styles.module.scss
@@ -1,5 +1,5 @@
 .story-list {
 	display: grid;
 	grid-template-columns: 0fr 1fr;
-	gap: 1em;
+	gap: 0.5em 1em;
 }
